# graphDB

./: .gitignore  CMakeLists.txt  README.md  graph_analysis.sh  network.sh
benchmark/: CMakeLists.txt  e2e_emgraph.cpp  initialization_emgraph.cpp  initialization_graphiti.cpp  mpa_emgraph.cpp  mpa_graphiti.cpp  shuffle.cpp  test_primitives.cpp  utils.cpp
pythonScripts/: getAggStat.py
src/: CMakeLists.txt
src/emgraph/: offline_evaluator.cpp  offline_evaluator.h  online_evaluator.h  online_evaluator_load_balanced.cpp  preproc.h  rand_gen_pool.cpp  rand_gen_pool.h  sharing.cpp  sharing.h
src/utils/: circuit.cpp  circuit.h  helpers.h  types.h
test/: offline.cpp  online.cpp  rand.cpp  sharing.cpp
